objects/CRM_TWD_Complaint_Creation__mdt.object
<CustomObject>
    <fields>
        <fullName>CRM_Field_API_Name__c</fullName>
        <label>CRM Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TWD_Field_API_Name__c</fullName>
        <label>TWD Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CRM-TWD Complaint Creation</label>
    <pluralLabel>CRM-TWD Complaint Creations</pluralLabel>
</CustomObject>